# ShelfSmart

./: .gitignore  README.md  package-lock.json
backend/: README.md  api.py  database.py  decrement_today_prices.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  seeder.py  shelfsmart.db  update_prices.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/components/: PriceHistoryGraph.tsx  ProductSummaryRow.tsx
frontend/pages/: LandingPage.tsx  Login.tsx  Signup.tsx
frontend/pages/Authentication/: Login.tsx  Signup.tsx
frontend/pages/Home/: VendorDashboard.tsx
frontend/pages/Marketplace/: Marketplace.tsx
frontend/pages/Product/: ProductPage.tsx
frontend/pages/Retailer/: AddProduct.tsx  Dashboard.tsx  DemandForecast.tsx
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: AuthenticationNavbar.tsx  Logo.tsx  RetailerSubscriptionModal.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  toast.tsx
frontend/src/components/vendordashboard/: AlertsList.tsx  InventoryByCategory.tsx  ProductHighlights.tsx  ProductInventoryTable.tsx  SalesPerformanceChart.tsx  SoldVsSpoilage.tsx
frontend/src/lib/: api.ts  auth.ts  subscriptions.ts
