[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "google>=3.0.0",
    "google-generativeai>=0.8.6",
    "passlib>=1.7.4",
    "pydantic[email]>=2.12.5",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
